--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./src/CSS/index.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="image-container">
+    <div class="header">
+        <div class="header__wrapper"> 
+          <div class="header__logo_section pos"> 
+            <img class="logo widh" src="./assets/image/лого.png" alt="">
+           <img class="location widh" src="./assets/image/Яндекс карты.png" alt="">
+          </div>
+          <div class="header__tel_section pos">
+            <div class="adress__container pos">
+              <p class="adress txt"><span class="weigt__adress txt">Производство кухонь на заказ</span>
+                Анапа, ул. Крылова, д. 27
+                </p>
+            </div> 
+            <img class="wtp" src="./assets/image/whatsapp.png" alt="">
+            <img src="./assets/image/telegram.png" alt="">
+              <p class="tel txt"> +7 (988)-311-77-88</p>
+              <button class="call txt">заказать звонок </button>
+          </div>
+        </div>
+    </div>
+    <img class="head__img" src="./assets/image/первый экран.png" alt="Your Image">
+</div>
+</div>
 </body>
 </html>
